[gd_scene load_steps=24 format=3 uid="uid://b24o8qsd434dj"]

[ext_resource type="PackedScene" uid="uid://fgdmieqnsupj" path="res://scenes/levels/level.tscn" id="1_2q7c8"]
[ext_resource type="Texture2D" uid="uid://xcs0yrug0qsy" path="res://assets/graphics/ground/stones.png" id="2_prg5n"]
[ext_resource type="Script" path="res://scenes/levels/outside.gd" id="2_t3xim"]
[ext_resource type="TileSet" uid="uid://cxooomk5mcxbp" path="res://scenes/levels/outside.tres" id="4_75ly7"]
[ext_resource type="PackedScene" uid="uid://cn2pnxckqgthg" path="res://scenes/buildings/house.tscn" id="5_d3vih"]
[ext_resource type="Texture2D" uid="uid://b2mev1xavhord" path="res://assets/graphics/decals/dirt_patch.png" id="6_qqa1b"]
[ext_resource type="Texture2D" uid="uid://bx6kms722h31n" path="res://assets/graphics/decals/moss/moss_1.png" id="7_ju7fx"]
[ext_resource type="Texture2D" uid="uid://d23u23u4q1dic" path="res://assets/graphics/decals/moss/moss_2.png" id="8_3u3ci"]
[ext_resource type="Texture2D" uid="uid://ckcscrak6etdj" path="res://assets/graphics/decals/moss/moss_3.png" id="9_bpxbr"]
[ext_resource type="Texture2D" uid="uid://co1nhxy14mkyk" path="res://assets/graphics/decals/moss/moss_4.png" id="10_0tu7q"]
[ext_resource type="Texture2D" uid="uid://dtyj7prwr837g" path="res://assets/graphics/decals/moss/moss_5.png" id="11_4qc4s"]
[ext_resource type="PackedScene" uid="uid://dq2bw803mvtkr" path="res://scenes/objects/steam_vent.tscn" id="12_exc3l"]
[ext_resource type="PackedScene" uid="uid://bqsykdy2py8at" path="res://scenes/objects/light_fan_animation.tscn" id="13_60sjy"]
[ext_resource type="PackedScene" uid="uid://bcm8fua6h335k" path="res://scenes/objects/gate.tscn" id="14_rwwdc"]
[ext_resource type="PackedScene" uid="uid://deye6qdqod16f" path="res://scenes/objects/simple_light.tscn" id="15_jhkvl"]
[ext_resource type="PackedScene" uid="uid://52f3qfgo7vxx" path="res://scenes/enemies/scout.tscn" id="17_xbqun"]
[ext_resource type="PackedScene" uid="uid://df8x5jnf715hb" path="res://scenes/objects/crate.tscn" id="18_6upoo"]
[ext_resource type="PackedScene" uid="uid://ceeadqcfre6od" path="res://scenes/enemies/bug.tscn" id="18_23mmj"]
[ext_resource type="PackedScene" uid="uid://cdg6h0fsw66i1" path="res://scenes/enemies/dron.tscn" id="19_fgdba"]
[ext_resource type="PackedScene" uid="uid://besv3u1qe5ck1" path="res://scenes/enemies/car.tscn" id="20_gs0c8"]
[ext_resource type="PackedScene" uid="uid://bb80r0gysk51v" path="res://scenes/enemies/hunter.tscn" id="20_tig5o"]

[sub_resource type="Curve2D" id="Curve2D_1e6i6"]
_data = {
"points": PackedVector2Array(491.224, -903.633, -491.224, 903.633, -3038, 714, 49.3883, -561.231, -49.3883, 561.231, -3068, 2066, -163.672, -354.766, 163.672, 354.766, -3020, 3436, -483.115, -93.2327, 483.115, 93.2327, -2031, 4711, -216.13, 67.8056, 216.13, -67.8056, -71, 5053, -897.97, 58.368, 897.97, -58.368, 3192, 4939, 127.136, 601.775, -127.136, -601.775, 4952, 4492, 0, 0, 0, 0, 4305, 3883, 754.295, -8.9797, -754.295, 8.9797, 2840, 3702, 528.008, -42.8115, -528.008, 42.8115, 1290, 3816, 0, 0, 0, 0, 538, 4016, 194.941, 237.32, -194.941, -237.32, -489, 4035, 352, 608, -352, -608, -784, 3236, 0, 0, 0, 0, -918, 2228, 64, 352, -64, -352, -746, 1447, 0, 0, 0, 0, -1193, 858, 456.978, 122.806, -456.978, -122.806, -1669, 601, 0, 0, 0, 0, -2478, 677, 0, 0, 0, 0, -3038, 714)
}
point_count = 19

[sub_resource type="NavigationPolygon" id="NavigationPolygon_17qu0"]
vertices = PackedVector2Array(4275, 4389, 2050, 3441, 1976, 3284, 2369, 2417, 2784, 2828, 5962, 3777, 5972, 4685, 5616, 4542, 4129, 2587, 4424, 2308, 4514, 2496, 4193, 2684, -1755, 1407, -2036, 215, -812, 232, -269, 1173, 54, 2982, 263, 2983, 893, 3215, 30, 3259, -1638, 3283, -1999, 3147, 893, 2847, 288, 2242, 1820, 2857, 1422, 2187, 705, 5200, -1828, 5159, 715, 4631, 903, 4351, 916, 4629, 45, 3405, 5335, 5188, 4157, 4603, 5442, 4952, -2004, 1921, -147, 1620, 2475, 1463, 3096, 874, 3615, 1389, 3399, 1608, 2691, 1714, 4045, 1760, 4112, 1848, 3719, 2150, 3794, 1949, 1278, 2061, 37, 2037, 40, 1502, 1324, 1287, 1049, 2992, 1677, 2992, 1688, 3385, 1032, 3377, 5635, 5044, 5807, 4638, 5981, 4692, 5956, 5190, -70, 1143, 4079, 2798, 3482, 2375, 1834, 3255, 2263, 2060, 1447, 1340, 2304, 1330, 3206.05, 2846.32, 3356, 2755, 3890, 3257, 3620, 1816, 5880, 328, 4815, 2369, 2428, 2228, 2924, 2602, 3208, 492, -1008, -99, -3600, -91, -3616, 5165, -2232, 1993, -2287, 3416, -1650, 3397, -1829, 5160, -2044, 2069)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4), PackedInt32Array(5, 6, 7), PackedInt32Array(8, 9, 10, 11), PackedInt32Array(12, 13, 14, 15), PackedInt32Array(16, 17, 18, 19, 20, 21), PackedInt32Array(22, 18, 17, 23), PackedInt32Array(24, 22, 23, 25, 3), PackedInt32Array(26, 27, 20, 28), PackedInt32Array(29, 30, 28, 20, 31), PackedInt32Array(32, 26, 28, 33), PackedInt32Array(34, 32, 33, 0, 7), PackedInt32Array(35, 36, 16, 21), PackedInt32Array(37, 38, 39, 40, 41), PackedInt32Array(42, 43, 44, 45), PackedInt32Array(46, 47, 48, 49), PackedInt32Array(50, 51, 52, 53), PackedInt32Array(20, 19, 31), PackedInt32Array(0, 29, 31, 53, 52, 1), PackedInt32Array(54, 55, 56, 57), PackedInt32Array(54, 57, 32), PackedInt32Array(34, 54, 32), PackedInt32Array(49, 48, 58), PackedInt32Array(8, 11, 59, 60, 44), PackedInt32Array(3, 2, 61, 24), PackedInt32Array(62, 3, 25, 63), PackedInt32Array(64, 62, 63), PackedInt32Array(65, 66, 67, 0), PackedInt32Array(68, 45, 44, 60), PackedInt32Array(69, 5, 7, 0, 70), PackedInt32Array(58, 15, 14), PackedInt32Array(71, 41, 40, 68, 60, 72, 3), PackedInt32Array(3, 72, 4), PackedInt32Array(0, 4, 65), PackedInt32Array(0, 67, 70), PackedInt32Array(69, 70, 73), PackedInt32Array(14, 69, 73), PackedInt32Array(14, 73, 64, 63, 49), PackedInt32Array(14, 49, 58), PackedInt32Array(74, 14, 13, 75), PackedInt32Array(76, 75, 13, 77), PackedInt32Array(78, 79, 80, 76), PackedInt32Array(35, 81, 77), PackedInt32Array(15, 36, 35, 12), PackedInt32Array(12, 35, 77, 13), PackedInt32Array(78, 76, 77)])
outlines = Array[PackedVector2Array]([PackedVector2Array(705, 5200, 5335, 5188, 5956, 5190, 5981, 4692, 5807, 4638, 5635, 5044, 5442, 4952, 5616, 4542, 5972, 4685, 5962, 3777, 5880, 328, -812, 232, -2036, 215, -1755, 1407, -269, 1173, -70, 1143, 40, 1502, 37, 2037, 1278, 2061, 1324, 1287, 1447, 1340, 1422, 2187, 288, 2242, 263, 2983, 54, 2982, 30, 3259, 893, 3215, 893, 2847, 1820, 2857, 1834, 3255, 1976, 3284, 2050, 3441, 2369, 2417, 2263, 2060, 2304, 1330, 3208, 492, 4815, 2369, 3890, 3257, 3356, 2755, 3206.05, 2846.32, 2784, 2828, 2924, 2602, 3482, 2375, 4079, 2798, 4193, 2684, 4514, 2496, 4424, 2308, 4129, 2587, 3719, 2150, 4112, 1848, 4045, 1760, 3794, 1949, 3620, 1816, 3399, 1608, 3615, 1389, 3096, 874, 2475, 1463, 2691, 1714, 2428, 2228, 2369, 2417, 2050, 3441, 1688, 3385, 1677, 2992, 1049, 2992, 1032, 3377, 45, 3405, 30, 3259, 54, 2982, -147, 1620, -2004, 1921, -1999, 3147, -1638, 3283, -1828, 5159, 705, 5200, 715, 4631, 916, 4629, 903, 4351, 4275, 4389, 4157, 4603, 715, 4631), PackedVector2Array(-1829, 5160, -1650, 3397, -2287, 3416, -2232, 1993, -2044, 2069, -2004, 1921, -147, 1620, -269, 1173, -1755, 1407, -2036, 215, -812, 232, -1008, -99, -3600, -91, -3616, 5165)])

[node name="Outside" instance=ExtResource("1_2q7c8")]
script = ExtResource("2_t3xim")

[node name="Ground" parent="." index="0"]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Soil" type="Sprite2D" parent="Ground" index="0"]
modulate = Color(0.831373, 0.729412, 0.729412, 1)
texture_repeat = 2
position = Vector2(1189, 2367.5)
scale = Vector2(3.002, 2.81436)
texture = ExtResource("2_prg5n")
region_enabled = true
region_rect = Rect2(-1618.26, -762.91, 4000, 3022.81)

[node name="Decorations" type="Node2D" parent="Ground" index="1"]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Dirt patch" type="Sprite2D" parent="Ground/Decorations" index="0"]
modulate = Color(0.917647, 0.929412, 0.831373, 0.988235)
position = Vector2(-1299, 1107)
texture = ExtResource("6_qqa1b")

[node name="Dirt patch2" type="Sprite2D" parent="Ground/Decorations" index="1"]
modulate = Color(0.917647, 0.929412, 0.831373, 0.988235)
position = Vector2(-837, 2041)
texture = ExtResource("6_qqa1b")

[node name="Dirt patch3" type="Sprite2D" parent="Ground/Decorations" index="2"]
modulate = Color(0.917647, 0.929412, 0.831373, 0.988235)
position = Vector2(1455, 2651)
texture = ExtResource("6_qqa1b")

[node name="Dirt patch4" type="Sprite2D" parent="Ground/Decorations" index="3"]
modulate = Color(0.917647, 0.929412, 0.831373, 0.988235)
position = Vector2(4280, 4397)
texture = ExtResource("6_qqa1b")

[node name="Dirt patch5" type="Sprite2D" parent="Ground/Decorations" index="4"]
modulate = Color(0.917647, 0.929412, 0.831373, 0.988235)
position = Vector2(-2255, 4344)
texture = ExtResource("6_qqa1b")

[node name="Dirt patch6" type="Sprite2D" parent="Ground/Decorations" index="5"]
modulate = Color(0.917647, 0.929412, 0.831373, 0.988235)
position = Vector2(-1316, 4446)
texture = ExtResource("6_qqa1b")

[node name="Mosses" type="Node2D" parent="Ground/Decorations" index="6"]

[node name="Moss1" type="Sprite2D" parent="Ground/Decorations/Mosses" index="0"]
position = Vector2(427, 1497)
texture = ExtResource("7_ju7fx")

[node name="Moss6" type="Sprite2D" parent="Ground/Decorations/Mosses" index="1"]
position = Vector2(1068, 2547)
texture = ExtResource("7_ju7fx")

[node name="Moss7" type="Sprite2D" parent="Ground/Decorations/Mosses" index="2"]
position = Vector2(-1478, 2547)
texture = ExtResource("7_ju7fx")

[node name="Moss8" type="Sprite2D" parent="Ground/Decorations/Mosses" index="3"]
position = Vector2(2414, 4080)
texture = ExtResource("7_ju7fx")

[node name="Moss2" type="Sprite2D" parent="Ground/Decorations/Mosses" index="4"]
position = Vector2(-2708, -18)
texture = ExtResource("8_3u3ci")

[node name="Moss3" type="Sprite2D" parent="Ground/Decorations/Mosses" index="5"]
position = Vector2(5872, 346)
texture = ExtResource("9_bpxbr")

[node name="Moss4" type="Sprite2D" parent="Ground/Decorations/Mosses" index="6"]
position = Vector2(-138, 703)
texture = ExtResource("10_0tu7q")

[node name="Moss5" type="Sprite2D" parent="Ground/Decorations/Mosses" index="7"]
position = Vector2(-1993, -27)
texture = ExtResource("11_4qc4s")

[node name="SteamVent" parent="Ground/Decorations" index="7" instance=ExtResource("12_exc3l")]
position = Vector2(10, 524)

[node name="SteamVent2" parent="Ground/Decorations" index="8" instance=ExtResource("12_exc3l")]
position = Vector2(1072, 488)

[node name="LightFanAnimation" parent="Ground/Decorations" index="9" instance=ExtResource("13_60sjy")]
z_index = 3
position = Vector2(2876, 2255)
scale = Vector2(0.912398, 0.912398)

[node name="TileMap" type="TileMap" parent="Ground" index="2"]
tile_set = ExtResource("4_75ly7")
format = 2
layer_0/name = "soil"
layer_0/tile_data = PackedInt32Array(-6, 65537, 1, -7, 65537, 1, -5, 65537, 2, 65530, 131073, 2, 65529, 1, 2, -8, 65537, 2, -65542, 65537, 1, -65546, 65537, 1, -65545, 65537, 1, -65544, 65537, 1, -65543, 65537, 1, -65541, 65537, 1, -65540, 65537, 1, -262154, 65537, 1, -196618, 65537, 1, -131082, 65537, 1, -262153, 65537, 1, -196617, 65537, 1, -131081, 65537, 1, -262152, 65537, 1, -196616, 65537, 1, -131080, 65537, 1, -262151, 65537, 1, -196615, 65537, 1, -131079, 65537, 1, -262150, 65537, 1, -196614, 65537, 1, -131078, 65537, 1, -262149, 65537, 1, -196613, 65537, 1, -131077, 65537, 1, -262148, 65537, 1, -196612, 65537, 1, -131076, 65537, 1, -65539, 65537, 1, -131075, 65537, 1, -196611, 131073, 1, -262147, 131073, 1, 7, 65537, 2, 8, 65537, 2, 9, 65537, 2, 10, 65537, 2, 11, 65537, 2, 12, 65537, 2, 13, 65537, 2, 14, 65537, 2, 15, 65537, 1, 6, 1, 2, -65530, 65537, 1, -65531, 65537, 2, -327673, 65537, 1, -262137, 65537, 1, -196601, 65537, 1, -131065, 65537, 1, -65529, 65537, 1, -327672, 65537, 1, -262136, 65537, 1, -196600, 65537, 1, -131064, 65537, 1, -65528, 65537, 1, -327671, 65537, 1, -262135, 65537, 1, -196599, 65537, 1, -131063, 65537, 1, -65527, 65537, 1, -327670, 65537, 1, -262134, 65537, 1, -196598, 65537, 1, -131062, 65537, 1, -65526, 65537, 1, -327669, 65537, 1, -262133, 65537, 1, -196597, 65537, 1, -131061, 65537, 1, -65525, 65537, 1, -327668, 65537, 1, -262132, 65537, 1, -196596, 65537, 1, -131060, 65537, 1, -65524, 65537, 1, -327667, 65537, 1, -262131, 65537, 1, -196595, 65537, 1, -131059, 65537, 1, -65523, 65537, 1, -327666, 65537, 1, -262130, 65537, 1, -196594, 65537, 1, -131058, 65537, 1, -65522, 65537, 1, -327665, 65537, 1, -262129, 65537, 1, -196593, 65537, 1, -131057, 65537, 1, -65521, 65537, 1, -327675, 65537, 1, -262139, 65537, 1, -196603, 65537, 1, -131067, 65537, 1, -327674, 65537, 1, -262138, 65537, 1, -196602, 65537, 1, -131066, 65537, 1, 65551, 1, 1, 131087, 1, 1, 196623, 1, 1, 262159, 1, 1, 327695, 1, 1, 393231, 1, 1, 458767, 1, 1, 524303, 1, 1, 589839, 1, 1, -4, 65537, 2, -3, 65537, 2, -10, 65537, 2, -9, 65537, 2, -262156, 65537, 1, -196620, 65537, 1, -131084, 65537, 1, -65548, 65537, 1, -12, 65537, 1, -262155, 65537, 1, -196619, 65537, 1, -131083, 65537, 1, -65547, 65537, 1, -11, 65537, 1, -262157, 65537, 1, -196621, 65537, 1, -131085, 65537, 1, -65549, 65537, 1, -13, 65537, 1, 589840, 65537, 1, 589841, 65537, 1, 589842, 65537, 1, 524306, 65537, 1, 458770, 65537, 1, 393234, 65537, 1, 327698, 65537, 1, 262162, 65537, 1, 196626, 65537, 1, 131090, 65537, 1, 65554, 65537, 1, 18, 65537, 1, -65518, 65537, 1, -131054, 65537, 1, -196590, 65537, 1, -262126, 65537, 1, -327662, 65537, 1, -327664, 65537, 1, -327663, 65537, 1, 16, 65537, 1, -65520, 65537, 1, -131056, 65537, 1, -196592, 65537, 1, -262128, 65537, 1, -262127, 65537, 1, -196591, 65537, 1, -131055, 65537, 1, -65519, 65537, 1, 17, 65537, 1, 65553, 65537, 1, 65552, 65537, 1, 131088, 65537, 1, 196624, 65537, 1, 262160, 65537, 1, 327696, 65537, 1, 393232, 65537, 1, 458768, 65537, 1, 524304, 65537, 1, 524305, 65537, 1, 458769, 65537, 1, 393233, 65537, 1, 327697, 65537, 1, 262161, 65537, 1, 196625, 65537, 1, 131089, 65537, 1, 655375, 1, 2, 655376, 65537, 2, 655377, 65537, 2, 655378, 65537, 2, 327680, 65536, 1, 327681, 65536, 0, 327682, 65536, 0, 327683, 131072, 2, 262147, 0, 2, 196611, 0, 1, 393216, 0, 2, 458752, 0, 3, 524288, 65536, 0, 524289, 65536, 0, 524290, 131072, 2, 458754, 65536, 1, 458755, 65536, 0, 458756, 131072, 1, 524292, 65536, 2, 720906, 131072, 0, 720905, 65536, 0, 720904, 65536, 0, 720903, 65536, 0, 720902, 65536, 0, 720901, 65536, 0, 720900, 65536, 0, 720899, 65536, 0, 720898, 0, 0, 393210, 0, 1, 458746, 0, 2, 524282, 0, 2, 589818, 65536, 2, 589819, 131072, 0)
layer_1/name = "walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-3, 131072, 0, -4, 65536, 0, -5, 65536, 0, -7, 65536, 0, -8, 65536, 0, -9, 65536, 0, -10, 65536, 1, -65531, 65536, 0, -65530, 131072, 1, 6, 65536, 2, 7, 65536, 0, 8, 65536, 0, 9, 65536, 0, 10, 65536, 0, 11, 65536, 0, 12, 65536, 0, 13, 65536, 0, 14, 65536, 0, 15, 131072, 1, 65551, 0, 2, 131087, 0, 2, 196623, 0, 2, 262159, 0, 2, 327695, 0, 2, 393231, 0, 2, 458767, 0, 2, 524303, 0, 2, 65526, 0, 2, 131062, 0, 2, 196598, 0, 2, 262134, 0, 2, 327670, 0, 2, 393206, 0, 2, 458742, 0, 2, 524278, 0, 2, 589814, 0, 2, 655350, 0, 2, -6, 65536, 0, 589839, 0, 2, 655375, 0, 2, 720911, 0, 2, 851983, 131072, 2, 786447, 0, 2, 851982, 65536, 0, 851981, 65536, 0, 851980, 65536, 0, 851979, 65536, 0, 851978, 65536, 0, 851977, 65536, 0, 851976, 65536, 0, 851975, 65536, 0, 851974, 65536, 0, 851973, 65536, 0, 851972, 65536, 0, 851971, 65536, 0, 851970, 65536, 0, 851969, 65536, 0, 851968, 65536, 0, 917503, 65536, 0, 917502, 65536, 0, 917501, 65536, 0, 917500, 65536, 0, 917499, 65536, 0, 917498, 65536, 0, 917497, 65536, 0, 917496, 65536, 0, 917495, 65536, 0, 917494, 65536, 2, 851958, 0, 2, 786422, 0, 2, 720886, 0, 2)

[node name="House" parent="Ground" index="3" instance=ExtResource("5_d3vih")]
position = Vector2(3429, 652)
rotation = 0.829031

[node name="Gate" parent="Ground" index="4" instance=ExtResource("14_rwwdc")]
position = Vector2(483, -622)

[node name="Luces" type="Node2D" parent="Ground" index="5"]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="SimpleLight" parent="Ground/Luces" index="0" instance=ExtResource("15_jhkvl")]
position = Vector2(16, 192)
rotation = -0.220354

[node name="SimpleLight2" parent="Ground/Luces" index="1" instance=ExtResource("15_jhkvl")]
position = Vector2(1068, 198)
rotation = 0.258657

[node name="Containers" type="Node2D" parent="Ground" index="6"]

[node name="Crate" parent="Ground/Containers" index="0" instance=ExtResource("18_6upoo")]
position = Vector2(5626, 4788)
rotation = 1.99373
collision_layer = 1
collision_mask = 1

[node name="Crate3" parent="Ground/Containers" index="1" instance=ExtResource("18_6upoo")]
position = Vector2(-3230, 4836)
rotation = 3.81559
collision_layer = 1
collision_mask = 1

[node name="Crate2" parent="Ground/Containers" index="2" instance=ExtResource("18_6upoo")]
position = Vector2(-112, 1376)
rotation = 1.28943

[node name="Decals" parent="." index="1"]
z_index = 2

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="." index="3"]
light_mask = 2
z_index = 2
color = Color(0.92, 0, 0.138, 1)
energy = 1.12
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.615686)
shadow_filter = 1
shadow_item_cull_mask = 2

[node name="DirectionalLight2D2" type="DirectionalLight2D" parent="." index="4"]
light_mask = 2
z_index = 2
color = Color(0.0823529, 0.227451, 0.890196, 1)
energy = 1.12
blend_mode = 1
shadow_enabled = true
shadow_color = Color(0.109804, 0.109804, 0.109804, 0)
shadow_filter = 1
shadow_filter_smooth = 26.7
shadow_item_cull_mask = 2

[node name="Scout" parent="Enemies" index="0" instance=ExtResource("17_xbqun")]
position = Vector2(75, 1238)

[node name="Bug" parent="Enemies" index="1" instance=ExtResource("18_23mmj")]
position = Vector2(4745, 1067)

[node name="Dron" parent="Enemies" index="2" instance=ExtResource("19_fgdba")]
position = Vector2(506, 2688)

[node name="Hunter" parent="Enemies" index="3" instance=ExtResource("20_tig5o")]
position = Vector2(4414, 3578)

[node name="Player" parent="." index="7"]
position = Vector2(4354, 2456)
rotation = 2.01406

[node name="CarPath" type="Path2D" parent="." index="9"]
curve = SubResource("Curve2D_1e6i6")

[node name="Car" parent="CarPath" index="0" instance=ExtResource("20_gs0c8")]
position = Vector2(-3038, 714)
rotation = 2.06872

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="." index="10"]
navigation_polygon = SubResource("NavigationPolygon_17qu0")

[connection signal="body_enter" from="Ground/House" to="." method="_on_house_body_enter"]
[connection signal="body_exit" from="Ground/House" to="." method="_on_house_body_exit"]
[connection signal="player_entered_gate" from="Ground/Gate" to="." method="_on_gate_player_entered_gate"]
